--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
                     </div>
                     <div class="col-xs-12 col-sm-6">
                       <div class="col-inner ts-30">
-                        <a href="WBv1.01.rar" target="_blank" class="btn btn-primary" download="download">Download Eduqii browser V1.01</a>
+                        <a href="EWBv1.01.rar" target="_blank" class="btn btn-primary" download="download">Download Eduqii browser V1.01</a>
                       </div>
                     </div>
                   </div>
