--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
               <div class="section-inner custom-page-content">
                 <div class="section-title-block second-style">
                   <h2 class="section-title">Resume</h2>
-                 <!-- <h5 class="section-description">3 Years of Freelance Experience</h5>-->
+                  <h5 class="section-description">Working on a project called Eduqii to help Junior high candidates in my community, developed a web browser to control their surfing on the internet.</h5>
                 </div>
 
                 <div class="section-content">
@@ -572,6 +572,11 @@
                     <div class="col-xs-12 col-sm-6">
                       <div class="col-inner ts-30">
                         <a href="EWBv1.01.rar" target="_blank" class="btn btn-primary" download="download">Download Eduqii browser V1.01</a>
+                      </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6">
+                      <div class="col-inner ts-30">
+                        <a href="https://www.eduqii.org/" target="_blank" class="btn btn-primary" >Eduqii</a>
                       </div>
                     </div>
                   </div>
