--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                           <!-- Text rotation / Subtitle -->
                           <div class="owl-carousel text-rotation">                                    
                             <div class="item">
-                              <div class="sp-subtitle">Web Developer</div>
+                              <div class="sp-subtitle">Educationist / Web Developer</div>
                             </div>
                             <div class="item">
                               <div class="sp-subtitle">FullStack-Web developer</div>
