--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <!-- / Social Links -->
 
           <!-- Copyrights -->
-          <div class="copyrights">© 2021 All rights reserved.</div>
+          <div class="copyrights">&copy; 2021 All rights reserved.</div>
           <!-- / Copyrights -->
         </div>
       </header>
