--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <img src="images/photo.jpg" alt="image">
             </a>
           </div>
-          <div class="mobile-site-title"><a href="#">Dwamena Bernard</a></div>
+          <div class="mobile-site-title"><a href="#">Dwamena Bernard Osei</a></div>
         </div>
 
         <a class="menu-toggle mobile-visible">
@@ -896,6 +896,7 @@
                       <div class="col-inner bs-30">
                         <div class="lm-info-block gray-default">
                           <i class="lnr lnr-phone-handset"></i>
+                          <h4><a href="tel:0504323529"><span style="color: white;">050-432-3529</span></a></h4>
                           <h4><a href="tel:0500518387"><span style="color: white;">050-051-8387</span></a></h4>
                           <span class="lm-info-block-value"></span>
                           <span class="lm-info-block-text"></span>
