--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <!-- / Social Links -->
 
           <!-- Copyrights -->
-          <div class="copyrights">&copy; 2021 All rights reserved.</div>
+          <div class="copyrights">&copy; 2022 All rights reserved.</div>
           <!-- / Copyrights -->
         </div>
       </header>
@@ -405,6 +405,43 @@
 
 
                         <div class="timeline timeline-second-style clearfix">
+
+                          <div class="timeline-item clearfix">
+                            <div class="left-part">
+                              <h5 class="item-period">2022 - Present</h5>
+                              <span class="item-company">Electricity Company of Ghana</span>
+                                    </div>
+                            <div class="divider"></div>
+                            <div class="right-part">
+                              <h4 class="item-title">Programmer</h4>
+                              <p>Help develop an application to help coordinate covid19 details of staff members</p>
+                              <p>Helped develop a web application to help I.T department capture assets in the company.</p>
+                            </div>
+                          </div>
+
+                          <div class="timeline-item clearfix">
+                            <div class="left-part">
+                              <h5 class="item-period">2021 - 2021</h5>
+                              <span class="item-company">Tech Nation GH</span>
+                                    </div>
+                            <div class="divider"></div>
+                            <div class="right-part">
+                              <h4 class="item-title">Backend Developer</h4>
+                              <p>Helped curate a distributor dashboard for artists distributors for the company's music streaming application, Aftown Music.</p>
+                            </div>
+                          </div>
+
+                          <div class="timeline-item clearfix">
+                            <div class="left-part">
+                              <h5 class="item-period">2020 - 2021</h5>
+                              <span class="item-company">Mount Zion Preparatory And J.H.S</span>
+                                    </div>
+                            <div class="divider"></div>
+                            <div class="right-part">
+                              <h4 class="item-title">I.C.T Tutor</h4>
+                              <p>Tutored students from stages/grades of 2 to Form 3 in modern technology and Information and Communication Technology Methodologies.</p>
+                            </div>
+                          </div>
 
                           <div class="timeline-item clearfix">
                             <div class="left-part">
