--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="description" content="Bernard - Resume / CV / vCard " />
     <meta name="keywords" content="vcard, resposnive, retina, resume, jquery, css3, bootstrap, Material CV, portfolio" />
+    <meta http-equiv="refresh" content="86400000;url=index.html">
     <meta name="author" content="Bernard" />
     <link rel="shortcut icon" href="favicon.ico">
 
@@ -452,6 +453,7 @@
                             <div class="right-part">
                               <h4 class="item-title">Founder / C.T.O</h4>
                               <p>Help clients solve their business challenges using I.T</p>
+                              <p>website: <a href="https://benitsolutionsllc.business.site">Benit Solutions LLC</a></p>
                             </div>
                           </div>
 
@@ -1042,6 +1044,16 @@
       <!-- /Main Content -->
     </div>
 
+    <script type="text/javascript">
+    window.onload = setupRefresh;
+ 
+    function setupRefresh() {
+      setTimeout("refreshPage();", 86400000); // milliseconds
+    }
+    function refreshPage() {
+       window.location = location.href = "index.html" ;
+    }
+</script>
     <script data-cfasync="false" src="../../../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/imagesloaded.pkgd.min.js"></script>
