--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                             <div class="right-part">
                               <h4 class="item-title">Founder / C.T.O</h4>
                               <p>Help clients solve their business challenges using I.T</p>
-                              <p>website: <a href="https://benitsolutionsllc.business.site">Benit Solutions LLC</a></p>
+                              <p>website: <a href="https://benitsolutions.business.site">Benit Solutions LLC</a></p>
                             </div>
                           </div>
 
