--- a/index-2.html
+++ b/index-2.html
@@ -133,7 +133,7 @@
                           <!-- /Text rotation / Subtitle -->
 
                           <h2 class="hp-main-title">Dwamena Bernard Osei</h2>
-                          <p>Enthusiastic Web developer eager to contribute to team success through hard work, attention to detail and excellent organizational skills. Clear understanding of Front-End and Back-End and training in Database management. Motivated to learn, grow and excel in the Electricity Company of Ghana (E.C.G). 
+                          <p>Enthusiastic Web developer eager to contribute to team success through hard work, attention to detail and excellent organizational skills. Clear understanding of Front-End and Back-End and training in Database management. Motivated to learn, grow and excel in the company. 
               Always prolific, full stack web developer with a passion for metrics and beating former "best-yets.". 
               </p>
                           <div class="hp-buttons">
