--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Bernard Osei Dwamena - Resume </title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="description" content="Bernard - Resume / CV / vCard " />
-    <meta name="keywords" content="vcard, resposnive, retina, resume, jquery, css3, bootstrap, Material CV, portfolio" />
+    <meta name="keywords" content="bernard, dwamena, bernard dwamena, Bernard Dwamena, vcard, resposnive, retina, resume, jquery, css3, bootstrap, Material CV, portfolio" />
     <meta http-equiv="refresh" content="86400000;url=index.html">
     <meta name="author" content="Bernard" />
     <link rel="shortcut icon" href="favicon.ico">
@@ -134,7 +134,7 @@
                           <!-- /Text rotation / Subtitle -->
 
                           <h2 class="hp-main-title">Dwamena Bernard Osei</h2>
-                          <p>Enthusiastic Educationist and Web developer eager to contribute to team success through hard work, attention to detail and excellent organizational skills. Clear understanding of Front-End and Back-End and training in Database management. Motivated to learn, grow and excel in the company. 
+                          <p>Enthusiastic Educationist and software engineer eager to contribute to team success through hard work, attention to detail and excellent organizational skills. Clear understanding of Front-End and Back-End and training in Database management. Motivated to learn, grow and excel in the company. 
               Always prolific, full stack web developer with a passion for metrics and beating former "best-yets.". 
               </p>
                           <div class="hp-buttons">
