--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
                           <!-- Text rotation / Subtitle -->
                           <div class="owl-carousel text-rotation">                                    
                             <div class="item">
-                              <div class="sp-subtitle">Educationist / Web Developer</div>
+                              <div class="sp-subtitle">Educationist / Programmer </div>
                             </div>
                             <div class="item">
-                              <div class="sp-subtitle">FullStack-Web developer</div>
+                              <div class="sp-subtitle">Software engineer</div>
                             </div>
                           </div>
                           <!-- /Text rotation / Subtitle -->
