--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Bernard Osei Dwamena - Resume </title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="description" content="Bernard - Resume / CV / vCard " />
-    <meta name="keywords" content="bernard, dwamena, bernard dwamena, Bernard Dwamena, vcard, resposnive, retina, resume, jquery, css3, bootstrap, Material CV, portfolio" />
+    <meta name="keywords" content="Bernard, Dwamena, Bernard Dwamena, vcard, resposnive, retina, resume, jquery, css3, bootstrap, Material CV, portfolio" />
     <meta http-equiv="refresh" content="86400000;url=index.html">
     <meta name="author" content="Bernard" />
     <link rel="shortcut icon" href="favicon.ico">
