--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <link rel="stylesheet" href="css/main.css" type="text/css">
 
     <script src="js/modernizr.custom.js"></script>
+    <script>
+      const d = new Date();
+      document.getElementById("todayCalendar").innerHTML = d;
+    </script>
   </head>
 
   <body>
@@ -208,7 +212,7 @@
                               <i class="lnr lnr-flag"></i>
                             </div>
                             <div class="ci-text">
-                              <h4>Devops Engineer</h4>
+                              <h4>DevOps Engineer</h4>
                               <p>Pellentesque pellentesque, ipsum sit amet auctor accumsan, odio tortor bibendum massa, sit amet ultricies ex lectus scelerisque nibh. Ut non sodales odio.</p>
                             </div>
                           </div>
