--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Bernard - Resume / CV / vCard " />
     <meta name="keywords" content="Bernard, Dwamena, Bernard Dwamena, vcard, resposnive, retina, resume, jquery, css3, bootstrap, Material CV, portfolio" />
     <meta http-equiv="refresh" content="86400000;url=index.html">
-    <meta name="author" content="Bernard" />
+    <meta name="author" content="Bernard Dwamena" />
     <link rel="shortcut icon" href="favicon.ico">
 
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -405,7 +405,7 @@
                             </div>
                             <div class="divider"></div>
                             <div class="right-part">
-                              <h4 class="item-title">Informatics Technology (I.T)</h4>
+                              <h4 class="item-title">Bsc. Informatics Technology (Baccalaureate)</h4>
                               <p>Followed my passion in a core of prototyping and web development classes</p>
                             </div>
                           </div>
